<!--
  ~
  ~  Copyright 2017 Nagarro Agile. All rights reserved.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  ~
  -->

<resources>
    <string name="app_name">ICICI Appathon</string>

    <!-- strings related to login -->
    <string name="login_screen_name">LOGIN</string>
    <string name="login_client_id">CLIENT ID</string>
    <string name="login_participation_access_code">PARTICIPATION ACCESS CODE</string>
    <string name="login_auth">AUTHENTICATE</string>
    <string name="hang_on_authenticate">Hang On! Authenticating is in process.</string>

    <!-- global messages -->
    <string name="network_error">Check your network connection.</string>
    <string name="user_name">Ajay Saini</string>

    <!-- strings related to get started screen -->
    <string name="get_started_screen_name">WELCOME TO SCAN, PAY and GO!</string>
    <string name="get_started">GET STARTED</string>
    <string name="get_started_next_step">Great! Start Shopping. Simply scan barcode of item and add it in your bucket and pay. Happy Shopping!</string>

    <!-- strings related to scan items -->
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="permission_camera_denied">Camera permission was denied. Please consider granting it in order to access the camera!</string>
    <string name="permission_camera_never_ask_again">Camera permission was denied with never ask again.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="scan_barcode_ask_to_check_out">Great! Please proceed to check out.</string>

    <!-- string related to payment gateway -->
    <string name="payment_screen_name">CHECK OUT</string>
    <string name="payment_item_name">Bvlgari Aqua Pour Homme Eau De Toilette</string>
    <string name="payment_size_quantity">Size: 100 ml Qty: 1</string>
    <string name="payment_sold_by">Sold by: Unistand</string>
    <string name="payment_amount">Rs. 1100 Rs <strike> Rs. 1200 </strike> (10% OFF)</string>
    <string name="payment_place_order">PLACE ORDER</string>
    <string name="hang_on_payment">Hang On! Payment is in process.</string>

    <!-- strings related to home screen -->
    <string name="home_screen_name">HOME</string>
    <string name="home_screen_open_drawer">Open</string>
    <string name="home_screen_close_drawer">Close</string>

    <!-- strings related to navigation view -->
    <string name="navigation_view_payment_history">Payment History</string>

</resources>
