<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~  Copyright 2017 Nagarro Agile. All rights reserved.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/item_image_view"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/item_price"
                        android:src="@drawable/order" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/item_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/item_image_view"
                        android:paddingLeft="16dp"
                        android:text="@string/payment_item_name"
                        android:textSize="16sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/item_size_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/item_name"
                        android:layout_toRightOf="@id/item_image_view"
                        android:paddingLeft="16dp"
                        android:text="@string/payment_size_quantity"
                        android:textSize="16sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/item_sold_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/item_size_quantity"
                        android:layout_marginTop="8dp"
                        android:layout_toRightOf="@id/item_image_view"
                        android:paddingLeft="16dp"
                        android:text="@string/payment_sold_by"
                        android:textSize="16sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/item_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/item_sold_by"
                        android:layout_marginTop="8dp"
                        android:layout_toRightOf="@id/item_image_view"
                        android:paddingLeft="16dp"
                        android:text="@string/payment_amount"
                        android:textSize="16sp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="618dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/place_order"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/payment_place_order"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

    </android.support.constraint.ConstraintLayout>
</layout>